finalized the user profile page

--- a/community.html
+++ b/community.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="community.css">
     <link rel="stylesheet" href="footer.css">
 </head>
@@ -31,13 +32,11 @@
     </header>
 
     <div class="container main-content">
-        <!-- Header Section -->
         <header class="header">
             <h1>Community Showcase</h1>
             <p>Discover amazing projects built by our collaborative community. Get inspired, connect with creators, and share your own innovations.</p>
         </header>
 
-        <!-- Stats Section -->
         <div class="stats-grid">
             <div class="stat-item">
                 <h3>247</h3>
@@ -57,7 +56,6 @@
             </div>
         </div>
 
-        <!-- Toolbar -->
         <div class="toolbar">
             <div class="toolbar-tabs">
                 <a href="#" class="tab active">All Categories</a>
@@ -70,24 +68,22 @@
             </div>
             <div class="toolbar-action">
                 <a href="#" class="btn-primary">
-                    <span class="emoji">⬆️</span> Upload Project
+                    <i class="fas fa-upload"></i> Upload Project
                 </a>
             </div>
         </div>
 
-        <!-- Projects Grid -->
         <div class="projects-grid">
-            <!-- Project Card 1 (Example) -->
             <div class="project-card">
                 <img src="https://placehold.co/600x400/2563eb/ffffff?text=AI+Powered+Healthcare" alt="AI-Powered Healthcare Platform" class="project-card-image">
                 <div class="project-card-header">
                     <div class="left-side">
                         <span class="category">Healthcare</span>
                         <div class="rating">
-                            <span class="emoji">⭐</span> 4.8
+                            <i class="fas fa-star"></i> 4.8
                         </div>
                     </div>
-                    <span class="like-button">❤️</span>
+                    <span class="like-button"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3>AI-Powered Healthcare Platform</h3>
                 <p>Revolutionary platform connecting patients with healthcare providers using advanced AI algorithms.</p>
@@ -108,10 +104,10 @@
                     </div>
                     <div class="social-stats">
                         <div class="social-stat">
-                            <span class="emoji">👍</span> 156
+                            <i class="fas fa-thumbs-up"></i> 156
                         </div>
                         <div class="social-stat">
-                            <span class="emoji">💬</span> 28
+                            <i class="fas fa-comments"></i> 28
                         </div>
                     </div>
                     <span class="date">1/5/2024</span>
@@ -119,17 +115,16 @@
                 <a href="#" class="btn-contribute">Contribute in this project</a>
             </div>
 
-            <!-- Project Card 2 (Example) -->
             <div class="project-card">
                 <img src="https://placehold.co/600x400/10b981/ffffff?text=Sustainable+Energy+Management+System" alt="Sustainable Energy Management System" class="project-card-image">
                 <div class="project-card-header">
                     <div class="left-side">
                         <span class="category" style="background-color: #dcfce7; color: #16a34a;">GreenTech</span>
                         <div class="rating">
-                            <span class="emoji">⭐</span> 4.5
+                            <i class="fas fa-star"></i> 4.5
                         </div>
                     </div>
-                    <span class="like-button">❤️</span>
+                    <span class="like-button"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3>Sustainable Energy Management System</h3>
                 <p>Smart grid management system that optimizes renewable energy distribution and reduces carbon footprint for residential and commercial buildings.</p>
@@ -150,10 +145,10 @@
                     </div>
                     <div class="social-stats">
                         <div class="social-stat">
-                            <span class="emoji">👍</span> 189
+                            <i class="fas fa-thumbs-up"></i> 189
                         </div>
                         <div class="social-stat">
-                            <span class="emoji">💬</span> 32
+                            <i class="fas fa-comments"></i> 32
                         </div>
                     </div>
                     <span class="date">1/10/2024</span>
@@ -161,17 +156,16 @@
                 <a href="#" class="btn-contribute">Contribute in this project</a>
             </div>
 
-            <!-- Project Card 3 (Example) -->
             <div class="project-card">
                 <img src="https://placehold.co/600x400/9333ea/ffffff?text=Virtual+Reality+Education+Platform" alt="Virtual Reality Education Platform" class="project-card-image">
                 <div class="project-card-header">
                     <div class="left-side">
                         <span class="category" style="background-color: #f3e8ff; color: #7e22ce;">EdTech</span>
                         <div class="rating">
-                            <span class="emoji">⭐</span> 4.9
+                            <i class="fas fa-star"></i> 4.9
                         </div>
                     </div>
-                    <span class="like-button">❤️</span>
+                    <span class="like-button"><i class="fas fa-heart"></i></span>
                 </div>
                 <h3>Virtual Reality Education Platform</h3>
                 <p>Immersive VR learning environment that transforms traditional education by providing interactive 3D experiences for students across various subjects.</p>
@@ -192,10 +186,10 @@
                     </div>
                     <div class="social-stats">
                         <div class="social-stat">
-                            <span class="emoji">👍</span> 312
+                            <i class="fas fa-thumbs-up"></i> 312
                         </div>
                         <div class="social-stat">
-                            <span class="emoji">💬</span> 67
+                            <i class="fas fa-comments"></i> 67
                         </div>
                     </div>
                     <span class="date">1/8/2024</span>
