--- a/feedback.html
+++ b/feedback.html
@@ -26,32 +26,34 @@
         </nav>
           <div class="navbar-spacer"></div>
     </header>
-  <div class="form-container">
-    <h2>Share Your Feedback</h2>
-    <p>Your thoughts help us improve the experience.</p>
-    <form>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" placeholder="Enter your name" required />
+  <main>
+    <div class="form-container">
+      <h2>Share Your Feedback</h2>
+      <p>Your thoughts help us improve the experience.</p>
+      <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required />
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Enter your email" required />
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required />
 
-      <label for="rating">Rating</label>
-      <select id="rating" name="rating" required>
-        <option value="">Select a rating</option>
-        <option value="5">⭐⭐⭐⭐⭐ - Excellent</option>
-        <option value="4">⭐⭐⭐⭐ - Very Good</option>
-        <option value="3">⭐⭐⭐ - Good</option>
-        <option value="2">⭐⭐ - Fair</option>
-        <option value="1">⭐ - Poor</option>
-      </select>
+        <label for="rating">Rating</label>
+        <select id="rating" name="rating" required>
+          <option value="">Select a rating</option>
+          <option value="5">⭐⭐⭐⭐⭐ - Excellent</option>
+          <option value="4">⭐⭐⭐⭐ - Very Good</option>
+          <option value="3">⭐⭐⭐ - Good</option>
+          <option value="2">⭐⭐ - Fair</option>
+          <option value="1">⭐ - Poor</option>
+        </select>
 
-      <label for="message">Your Feedback</label>
-      <textarea id="message" name="message" rows="4" placeholder="Write your feedback..." required></textarea>
+        <label for="message">Your Feedback</label>
+        <textarea id="message" name="message" rows="4" placeholder="Write your feedback..." required></textarea>
 
-      <button type="submit">Submit Feedback</button>
-    </form>
-  </div>
+        <button type="submit">Submit Feedback</button>
+      </form>
+    </div>
+  </main>
   <footer class="footer">
         <div class="container">
             <div class="footer-top">
