project details fixed

--- a/project-details.html
+++ b/project-details.html
@@ -40,7 +40,7 @@
                 <span class="project-id">Project ID: #2024-001</span>
             </div>
             <div class="project-header-actions">
-                <button class="btn-primary"><i class="fas fa-handshake"></i> Join Project</button>
+                <!-- <button class="btn-primary"><i class="fas fa-handshake"></i> Join Project</button> -->
                 <button class="btn-transparent"><i class="fas fa-envelope"></i> Contact Leader</button>
                 <button class="btn-transparent"><i class="fas fa-share-alt"></i> Share Project</button>
             </div>
