--- a/user-profile.html
+++ b/user-profile.html
@@ -50,11 +50,14 @@
                             alexander.thompson@company.com
                         </span>
                         <span class="contact-item">
-                            <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path
-                                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06L5.16 10.65a11.037 11.037 0 006.105 6.105l1.06-.54a1 1 0 011.06-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2c-5.523 0-10-4.477-10-10V3z" />
+                            <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" 
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor" 
+                                stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" 
+                                    d="M2 6a2 2 0 012-2h3l2 5-2 2c1.5 3 3.5 5 6.5 6.5l2-2 5 2v3a2 2 0 01-2 2h-2
+                                    C9.163 21 3 14.837 3 7V6z" />
                             </svg>
+
                             +1 (555) 123-4567
                         </span>
                         <span class="contact-item">
