--- a/user-profile.html
+++ b/user-profile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="user-profile.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -20,8 +21,8 @@
                     <a href="index.html">Home</a>
                     <a href="projects.html">Projects</a>
                     <a href="community.html">Community</a>
-                    <div class="nav-btns">
-                        <a href="login.html" class="btn-secondary">Sign In</a>
+                    <div class="nav-btns" id="nav-buttons">
+                        <a href="login.html" class="btn-secondary" id="sign-in-link">Sign In</a>
                         <a href="projects.html" class="btn-primary">Get Started</a>
                     </div>
                 </div>
@@ -32,14 +33,13 @@
 
     <div class="main-container">
 
-        <!-- Profile Header Section -->
         <div class="section-card">
             <div class="profile-header">
                 <img src="https://placehold.co/96x96/6c63ff/FFFFFF?text=VK" alt="Profile Picture"
-                    class="profile-picture">
+                    class="profile-picture" id="profile-picture">
                 <div class="profile-info">
-                    <h1 class="profile-name">Vaibhav Katyal</h1>
-                    <p class="profile-role">Senior Project Manager & Team Lead</p>
+                    <h1 class="profile-name" id="profile-name">Vaibhav Katyal</h1>
+                    <p class="profile-role" id="profile-role">Senior Project Manager & Team Lead</p>
                     <div class="contact-info">
                         <span class="contact-item">
                             <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
@@ -47,14 +47,17 @@
                                 <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
                                 <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
                             </svg>
-                            alexander.thompson@company.com
+                            <span id="profile-email">alexander.thompson@company.com</span>
                         </span>
                         <span class="contact-item">
-                            <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path
-                                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06L5.16 10.65a11.037 11.037 0 006.105 6.105l1.06-.54a1 1 0 011.06-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2c-5.523 0-10-4.477-10-10V3z" />
+                            <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" 
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor" 
+                                stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" 
+                                    d="M2 6a2 2 0 012-2h3l2 5-2 2c1.5 3 3.5 5 6.5 6.5l2-2 5 2v3a2 2 0 01-2 2h-2
+                                    C9.163 21 3 14.837 3 7V6z" />
                             </svg>
+
                             +1 (555) 123-4567
                         </span>
                         <span class="contact-item">
@@ -73,7 +76,7 @@
                                     d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
                                     clip-rule="evenodd" />
                             </svg>
-                            Joined March 2020
+                            <span id="profile-joined-date">Joined March 2020</span>
                         </span>
                     </div>
                 </div>
@@ -81,7 +84,6 @@
             </div>
         </div>
 
-        <!-- Leadership and Teamwork Sections -->
         <div class="achievement-grid">
             <div class="achievement-card">
                 <div class="achievement-header">
@@ -148,7 +150,6 @@
             </div>
         </div>
 
-        <!-- Summary Stats Section -->
         <div class="stat-cards-grid">
             <div class="stat-card">
                 <div class="stat-value">47</div>
@@ -164,7 +165,6 @@
             </div>
         </div>
 
-        <!-- Current Projects Section -->
         <div class="section-card">
             <h3 class="section-title">Current Projects</h3>
             <div class="project-item">
@@ -199,7 +199,6 @@
             </div>
         </div>
 
-        <!-- Recent Tasks Section -->
         <div class="section-card">
             <h3 class="section-title">Recent Tasks</h3>
             <table class="task-table">
@@ -333,6 +332,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="user-profile.js"></script>
 
 </body>
 
