--- a/project-details.html
+++ b/project-details.html
@@ -16,13 +16,49 @@
 
     <style>
         /* ADDED: Simple loading/error state styling */
+        .task-status-modal .modal-content {
+            max-width: 450px;
+        }
+
+        .form-group-inline {
+            display: flex;
+            gap: 20px;
+        }
+
+        .form-group-inline .form-group {
+            flex: 1;
+        }
+
+        /* Style for the button inside the task card */
+        .task-card-actions {
+            display: flex;
+            gap: 10px;
+            justify-content: flex-end;
+            /* Push button to the right */
+            align-items: center;
+        }
+
+        .task-card {
+            /* UPDATED GRID */
+            display: grid;
+            grid-template-columns: 1fr 200px 150px;
+            /* Adjusted columns */
+            gap: 10px;
+            align-items: center;
+        }
+
         .navbar {
-            padding: 10px 0; /* Reduced vertical padding */
+            padding: 10px 0;
+            /* Reduced vertical padding */
         }
+
         .nav-container {
-            align-items: center; /* Ensure vertical alignment */
-            min-height: 60px; /* Set a reasonable min height */
+            align-items: center;
+            /* Ensure vertical alignment */
+            min-height: 60px;
+            /* Set a reasonable min height */
         }
+
         .loading-state {
             text-align: center;
             padding: 50px;
@@ -356,6 +392,48 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn-primary">Submit Task</button>
+                        </form>
+                    </div>
+                </div>
+
+                <div id="status-update-modal" class="modal task-status-modal">
+                    <div class="modal-content">
+                        <span class="close-btn update-close-btn">&times;</span>
+                        <h2 id="update-task-name">Update Task Status</h2>
+                        <form id="status-update-form">
+                            <input type="hidden" id="update-task-id">
+
+                            <div class="form-group">
+                                <label for="update-task-progress">Current Progress (%)</label>
+                                <input type="number" id="update-task-progress" min="0" max="100" value="0" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="update-task-status">Status</label>
+                                <select id="update-task-status" required>
+                                    <option value="Pending">Pending</option>
+                                    <option value="In Progress">In Progress</option>
+                                    <option value="Complete">Complete</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="update-task-notes">Notes/Comment (Optional)</label>
+                                <textarea id="update-task-notes" rows="2"></textarea>
+                            </div>
+
+                            <hr style="margin: 20px 0; border-color: #e5e7eb;">
+
+                            <h3>Request Time Extension (Optional)</h3>
+                            <div class="form-group">
+                                <label for="update-task-request">Requested New Due Date</label>
+                                <input type="date" id="update-task-request">
+                                <small style="color: #6b7280; display: block; margin-top: 5px;">This request will be
+                                    visible to the Team Leader.</small>
+                            </div>
+
+                            <button type="submit" class="btn-primary" style="width: 100%; margin-top: 10px;">Submit
+                                Update</button>
                         </form>
                     </div>
                 </div>
